Development
    Add in new icons, attention packagers: new file locations $datadir/icons
    Add enca to the list of language codes, use this if mplayer supports enca
        for even better detection add ":[2 letter lang code]" after enca (ie enca:ru)
    Set sub_source to 0 (file) when ID_FILE_SUB_ID is found
    Prepare for multiple icon sizes
    Replace calls to g_strncasecmp with g_ascii_strncasecmp
    Fix nautilus property page so that it works correctly
    Set flat volume flag in schemas depending on version of pulseaudio installed
    Add "Respond to Keyboard Media keys" option
    Move some functions to libgmlib
    Add internal ASX parser
    Version bump and add -fPIC to gmtk and gmlib
    Remove need to use libtool
    Apply patch to fix --as-needed linker flag
0.9.6
    Fix volume setting, when passed on command line
    Updated Turkish and Chinese Translations
    Some fixes for crap files
    Slight change to the interface preferences layout screen
    Fix bug #187 - no video when playlist opened
    Update several translations Spanish, Chinese, Korean, Greek, Serbian, Japanes
    Updated Polish translation
    Allow screenshot to work correctly when paused, although frame is still advanced 1 frame
    Fix playlist visibility on load when view playlist on load option is set
    Fix window resize issue when details are shown and second video is loaded
    Add cancel button to folder load progress bar, clicking cancel clears the playlist
        and cancels the load
    Change -af to -af-add when adding in the export audio filter
    Switch to shared dbus connection, rather that private for faster startup
    Fix some problems with streaming media
    Prevent Drag n Drop reordering in playlist view
    Fix image rescale issue, when mplayer display sizes are different than info values
    Prevent PostProcessing filters from activating with vdpau or xvmc vo's
    Fix popout to fullscreen mode when embedded to work under KWin