@@ -323,6 +323,7 @@ gint auto_hide_timeout;
 gboolean always_hide_after_timeout;
 gchar *subtitlefont;
 gdouble subtitle_scale;
+gdouble subtitle_delay;
 gchar *subtitle_codepage;
 gchar *subtitle_color;
 gboolean subtitle_outline;
